--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <div class="card_evil"></div>
     <div class="card_evil"></div>
     <div class="card_evil"></div>
+    <div class="card_evil"></div>
     </div>
     <div class="amount">
     <div class="amount_name">Сумма:</div>
@@ -19,6 +20,7 @@
     </div>
     <div id="hero_name">Герой</div>
     <div class="card">
+    <div class="card_hero"></div>
     <div class="card_hero"></div>
     <div class="card_hero"></div>
     <div class="card_hero"></div>
